<!--
  ~ Copyright 2018 Dionysios Karatzas
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">StarWars Pedia</string>
    <string name="content_authority">eu.dkaratzas.starwarspedia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">StarWars Pedia</string>
    <string name="nav_header_subtitle">Made by Dionysios Karatzas\ndnkaratzas@gmail.com\nVersion 1.0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="greetings_padawan">greetings,\nmy young padawan</string>
    <string name="no_internet">\"To be offline internet connection appears.\n\nHmmmmmmmm....\"</string>
    <string name="error_getting_data">\"To get star wars data from the server failed.\n\nHmmmmmmmm....\"</string>
    <string name="added_to_favourite">added to favourites</string>
    <string name="removed_from_favourite">removed from favourites</string>
    <string name="no_favourites_message">No favourites, you have.\n\nHmmmmmmmm....\"</string>
    <string name="share">Share</string>
    <string name="favourites">Favourites</string>
    <string name="empty_widget_view_text">No favourite StarWarsPedia Data!</string>
    <string name="inapp_billing_not_available">In-app billing service is unavailable. Please upgrade Google Play to version >= 3.9.16.</string>
    <string name="unexpected_error">An unexpected error occurred. Please try again later.</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="remove_ads_description">You can Remove Ads with a purchase within the app. If you have already paid but reinstalled the app, click the button and the premium features will be recovered.</string>
    <string name="thank_you">Thank you so much for your contribution.</string>
    <string name="lets_go">Let\'s go!</string>

    <!-- Images Content Descriptions-->
    <string name="image_thumbnail">Thumbnail</string>
    <string name="logo">Logo</string>
    <string name="yoda">Yoda</string>
    <string name="refresh">Refresh</string>

    <!-- Categories -->
    <string name="people">Characters</string>
    <string name="films">Films</string>
    <string name="starships">Starships</string>
    <string name="vehicles">Vehicles</string>
    <string name="species">Species</string>
    <string name="planets">Planets</string>
    <string name="favourite">Favourite</string>


    <!-- Models -->
    <string name="related">Related %s</string>
    <string name="birth_year">Birth Year</string>
    <string name="height">Height</string>
    <string name="mass">Mass</string>
    <string name="gender">Gender</string>
    <string name="hair_color">Hair Color</string>
    <string name="skin_color">Skin Color</string>
    <string name="eye_color">Eye Color(s)</string>
    <string name="release_date">Release Date</string>
    <string name="director">Director</string>
    <string name="producer">Producer(s)</string>
    <string name="opening_crawl">Opening Crawl</string>
    <string name="population">Population</string>
    <string name="rotation_period">Rotation Period</string>
    <string name="orbital_period">Orbital Period</string>
    <string name="diameter">Diameter</string>
    <string name="gravity">Gravity</string>
    <string name="terrain">Terrain</string>
    <string name="surface_water">Surface Water</string>
    <string name="climate">Climate</string>
    <string name="residents">Residents</string>
    <string name="homeworld">Homeworld</string>
    <string name="classification">Classification</string>
    <string name="designation">Designation</string>
    <string name="language">Language</string>
    <string name="avg_lifespan">Avg Lifespan</string>
    <string name="avg_height">Avg Height</string>
    <string name="model">Model</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="starship_class">Class</string>
    <string name="cost">Cost</string>
    <string name="speed">Speed</string>
    <string name="hyperdrive_rating">Hyperdrive Rating</string>
    <string name="mglt">MGLT</string>
    <string name="length">Length</string>
    <string name="cargo_capacity">Cargo Capacity</string>
    <string name="crew">Minimum Crew</string>
    <string name="passengers">Passengers</string>
    <string name="pilots">Pilots</string>
    <string name="consumables">Consumables</string>


</resources>
