<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/ic_vader"
            android:title="@string/people" />
        <item
            android:id="@+id/nav_species"
            android:icon="@drawable/ic_wookiee"
            android:title="@string/species" />
        <item
            android:id="@+id/nav_sparships"
            android:icon="@drawable/ic_millennium_falcon"
            android:title="@string/starships" />
        <item
            android:id="@+id/nav_vehicles"
            android:icon="@drawable/ic_at_at"
            android:title="@string/vehicles" />
        <item
            android:id="@+id/nav_planets"
            android:icon="@drawable/ic_planet"
            android:title="@string/planets" />
        <item
            android:id="@+id/nav_films"
            android:icon="@drawable/ic_video"
            android:title="@string/films" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_favorites"
            android:title="@string/favourites" />
    </group>
</menu>
